Bug 1407480 - Carry valid Rect when calling NotifyInvalidation() in layers-free mode. r=kats